@@ -1,5 +1,9 @@
 2012-01-21  Andrew Okin  <razorblades13@gmail.com>
 
+	* MainWindow.cs: 
+
+2012-01-21  Andrew Okin  <razorblades13@gmail.com>
+
 	* README: Added
 	* MultiMC.csproj: Added readme file
 
